--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,112 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "blog": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/blog",
+      "sourceRoot": "projects/blog/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:application",
+          "options": {
+            "browser": "projects/blog/src/main.ts",
+            "tsConfig": "projects/blog/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/blog/public"
+              }
+            ],
+            "styles": [
+              "projects/blog/src/styles.css"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular/build:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "blog:build:production"
+            },
+            "development": {
+              "buildTarget": "blog:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular/build:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/blog/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/blog/public"
+              }
+            ],
+            "styles": [
+              "projects/blog/src/styles.css"
+            ]
+          }
+        }
+      }
+    },
+    "seeds": {
+      "projectType": "library",
+      "root": "projects/seeds",
+      "sourceRoot": "projects/seeds/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular/build:ng-packagr",
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/seeds/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/seeds/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular/build:karma",
+          "options": {
+            "tsConfig": "projects/seeds/tsconfig.spec.json"
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "analytics": "a65ef0e7-8f87-46db-84a9-5f31cbc66383"
   }
 }
