--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "skipLibCheck": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
+    "paths": {
+      "seeds": [
+        "./dist/seeds"
+      ]
+    },
     "importHelpers": true,
     "target": "ES2022",
     "module": "preserve"
@@ -22,5 +27,19 @@
     "typeCheckHostBindings": true,
     "strictTemplates": true
   },
-  "files": []
+  "files": [],
+  "references": [
+    {
+      "path": "./projects/blog/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/blog/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/seeds/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/seeds/tsconfig.spec.json"
+    }
+  ]
 }
