--- a/angular.json
+++ b/angular.json
@@ -21,9 +21,7 @@
                 "input": "projects/blog/public"
               }
             ],
-            "styles": [
-              "projects/blog/src/styles.css"
-            ]
+            "styles": ["projects/blog/src/styles.css"]
           },
           "configurations": {
             "production": {
@@ -74,9 +72,7 @@
                 "input": "projects/blog/public"
               }
             ],
-            "styles": [
-              "projects/blog/src/styles.css"
-            ]
+            "styles": ["projects/blog/src/styles.css"]
           }
         }
       }
@@ -85,7 +81,30 @@
       "projectType": "library",
       "root": "projects/seeds",
       "sourceRoot": "projects/seeds/src",
-      "prefix": "lib",
+      "prefix": "seed",
+      "schematics": {
+        "@schematics/angular:component": {
+          "skipTests": true
+        },
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:guard": {
+          "skipTests": true
+        },
+        "@schematics/angular:module": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
       "architect": {
         "build": {
           "builder": "@angular/build:ng-packagr",
