--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ci": "ng build --project blog --configuration production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -26,9 +27,15 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@ng-icons/core": "^32.1.0",
+    "@ng-icons/lucide": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
+    "dompurify": "^3.2.6",
+    "marked": "^16.2.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
     "tslib": "^2.3.0"
   },
