--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,7 @@
     "isolatedModules": true,
     "experimentalDecorators": true,
     "paths": {
-      "@seed/*": ["./projects/seeds/src/lib/*"],
-      "seeds": ["./dist/seeds"]
+      "@seed/*": ["./projects/seeds/src/lib/*"]
     },
     "importHelpers": true,
     "target": "ES2022",
@@ -39,6 +38,12 @@
     },
     {
       "path": "./projects/seeds/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/techgarden/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/techgarden/tsconfig.spec.json"
     }
   ]
 }
