--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -62,3 +62,22 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Clone GitOps repo
+        run: |
+          git clone https://x-access-token:${{ secrets.GITOPS_PUSH_TOKEN }}@github.com/techgardencode/homelab.git
+          cd homelab/kubernetes/clusters
+          echo "GITOPS_BASE_PATH=$PWD" >> $GITHUB_ENV
+      - name: Update kustomization.yaml with new image tag
+        run: |
+          cd $GITOPS_BASE_PATH
+          yq -i '.image.tag = "${{ github.sha }}"' 1276-prod/techgarden/www/values.yaml
+          yq -i '.image.tag = "${{ github.sha }}"' 5963-prod/techgarden/www/values.yaml
+      - name: Commit and push to GitOps repo
+        run: |
+          cd $GITOPS_BASE_PATH
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add 1276-prod/techgarden/www/values.yaml
+          git add 5963-prod/techgarden/www/values.yaml
+          git commit -m "chore: update image to ${{ github.sha }}"
+          git push
