--- a/angular.json
+++ b/angular.json
@@ -93,7 +93,13 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "projects/techgarden/src/environments/environment.ts",
+                  "with": "projects/techgarden/src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
