--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dompurify": "^3.2.6",
     "marked": "^16.2.0",
     "postcss": "^8.5.6",
+    "posthog-js": "^1.260.2",
     "rxjs": "~7.8.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12",
