feat: add dev tags

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -10,6 +10,7 @@ env:
 
 jobs:
   build-and-push-dev:
+    if: github.event_name == 'push' && contains(github.ref, 'refs/heads/dev')
     runs-on: ubuntu-latest
 
     permissions:
@@ -53,6 +54,7 @@ jobs:
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
             type=sha,prefix=,format=long
+            type=raw,value=dev,enable=${{ github.ref == format('refs/heads/{0}', 'dev') }}
 
       - name: Build and push the Docker image
         uses: docker/build-push-action@v5
