--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/forms": "^20.1.0",
     "@angular/platform-browser": "^20.1.0",
     "@angular/router": "^20.1.0",
+    "@editorjs/editorjs": "^2.30.8",
     "@ng-icons/core": "^32.1.0",
     "@ng-icons/lucide": "^32.1.0",
     "@tailwindcss/postcss": "^4.1.12",
