--- a/angular.json
+++ b/angular.json
@@ -81,6 +81,7 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/cdk/overlay-prebuilt.css",
               "projects/techgarden/src/styles.css"
             ]
           },
@@ -143,6 +144,7 @@
               }
             ],
             "styles": [
+              "node_modules/@angular/cdk/overlay-prebuilt.css",
               "projects/techgarden/src/styles.css"
             ]
           }
